# Scraping

./: .gitignore  data.json  debug_db.py  main.py  name.py  pyproject.toml  requirements.txt
data/: products.json
src/: config.py  db.py  llm.py  name.py  oxylabs_client.py  services.py
